# agenet

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  data.csv  index.html  objects.inv  output.csv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: cov.yml  docs.yml  jekyll-gh-pages.yml  publish.yml  test.yml
agenet/: Documents - Shortcut.lnk  Untitled-1.ipynb  Untitled-2.ipynb  Untitled-2_1.ipynb  Untitled-3.ipynb  __init__.py  aaoi.py  aloha.py  av_age.py  av_age_new.py  average.py  bler.py  bler_th.py  blkerr.py  cli.py  graph.py  maincom.py  plot.py  print.py  printage.py  printplot.py  simulation.py  snr.py  snratio.py
dev/: index.html
doc/: av_age.html  docmain.yml
docs/: copyright.html  docmain.yml  maincom.html  mkdocs.yml
docs/docs/: dev.md  index.md  reference.md  theory.md  usage.md
docs/overrides/partials/: copyright.html
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/javascripts/: mathjax.js
docs/site/reference/: index.html
docs/site/search/: search_index.json
docs/site/theory/: index.html
docs/site/usage/: index.html
reference/: index.html
test/: __init__.py  no_test_cli.py  test_aaoi.py  test_av_age.py  test_bler.py  test_blkerr.py  test_cli.py  test_maincom.py  test_plot.py  test_printage.py  test_printplot.py  test_simulation.py  test_snr.py  test_snratio.py  x_test_cli.py
theory/: index.html
usage/: index.html
