[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agenet"
version = "0.0.1"
description = "Age of Inforamtaion Model for wireless networks"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["fibonacci", "recursive"]
license = {text = "MIT"}
authors = [ { name = "Chathuranga Basanayaka", email = "chathurangab@sltc.ac.lk" } ]
dependencies = [ "numpy", "pandas" , "tabulate", "matplotlib", "scipy"] # Not really required

[project.scripts]
#pyfibo = "finefibo.fibo:run_from_cli"

[project.optional-dependencies]
dev = [
    "pdoc",
    "pytest >= 6.0",
    "coverage",
    "pytest-cov >= 3.0.0" ]

[tool.setuptools]
#packages = ["finefibo"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --tb=short --strict-markers"
testpaths = [ "tests" ]
#xfail_strict = "true"
markers = [
    "critical: The most critical tests",
    "get: Test functions which return some value",
    "fast: The fast tests" ]


